# percolator

./: .gitignore  ADMIN_FUNCTIONS_REPORT.md  BPF_FEATURES_IMPLEMENTATION_GUIDE.md  BPF_FEATURES_PROGRESS.md  CLI_TEST_UNBLOCKING_SUMMARY.md  COMPREHENSIVE_CODE_AUDIT_REPORT.md  CONTEXT.md  Cargo.toml  Dockerfile.oracle-keeper  FUNDING_E2E_STATUS.md  FUNDING_SCENARIOS_STATUS.md  FUNDING_TEST_AUDIT_REPORT.md  FUNDING_TEST_SUCCESS.md  KITCHEN_SINK_TEST.md  LP_RISK_ASYMMETRY.md  ORDERBOOK_SCENARIOS_STATUS.md  PLACEHOLDER_AUDIT_REPORT.md  PROGRESS.md  README.md  SECURITY-DEPS.md  TESTING.md  TEST_RESULTS.md  THREAT_MODEL.md  VERIFICATION_GAPS_REPORT.md  audit.md  kani-list.json  kani_audit_current.tsv  kani_audit_final.tsv  kani_audit_full.tsv  package.json  plan.md  pnpm-lock.yaml  run_all_phases.sh  rust_out  spec.md  test_comprehensive_crisis.sh  test_funding_e2e.sh  test_funding_simple.sh  test_funding_working.sh  test_kitchen_sink.sh  (+5 more)
.cargo/: config.toml
.github/: pull_request_template.md
app/: middleware.ts  next.config.ts  package.json  vitest.config.ts
docs/: MARGIN_DEX_LP_ARCHITECTURE.md  TEST_SCRIPTS_EXECUTION_STATUS.md  position-nft.md
examples/: detailed_offsets.rs  offsets.rs  sizecheck.rs  sizecheck2.rs  sizecheck3.rs
kani_close/: proofs.txt
kani_closure/: proofs.txt
kani_contracts/: proofs.txt
kani_frame/: proofs.txt
scripts/: TESTING.md  actionable_class_coverage.py  audit-proof-strength.md  auto-crank-service.ts  boundary_audit.py  check-oracle-authority.ts  contracts_runner.sh  cover_vacuity_gate.py  identity_independence_audit.py  kani_audit_certified.tsv  kernel-branch-certification.md  kernel_results.tsv  lof_transition_class_roster.py  no-dos-liveness.md  no-steal-theorem.md  oracle-keeper.ts  pause-market.ts  proof-frontier-closure.md  proof-strength-audit-results.md  proof_strength_gate.py  reinit-slab.ts  run_kani_full_audit.sh  spec-coverage.md  test_e2e.sh  test_scenarios.sh  transfer-sol.ts
src/: i128.rs  kani_proofs.rs  lib.rs  percolator.rs  tests.rs  v13.rs  v14.rs  v15.rs  v16.rs  v16_kani_api.rs  v16_proofs.rs  wide_math.rs
tests/: ak.rs  amm_tests.rs  backing_double_claim_fuzz.rs  devnet-e2e.ts  fuzz_warmup_budget.rs  fuzzing.proptest-regressions  fuzzing.rs  fuzzing_extended.rs  kani.rs  proofs_admission.rs  proofs_arithmetic.rs  proofs_audit.rs  proofs_b_index.rs  proofs_barrier.rs  proofs_checklist.rs  proofs_cohort.rs  proofs_instructions.rs  proofs_invariants.rs  proofs_lazy_ak.rs  proofs_liveness.rs  proofs_phase_f.rs  proofs_safety.rs  proofs_v1131.rs  proofs_v13.rs  proofs_v13_arithmetic.rs  proofs_v14.rs  proofs_v15.rs  proofs_v15_arithmetic.rs  proofs_v16.rs  proofs_v16_arithmetic.rs  proofs_v16_fork.rs  proofs_v16_fork_invariants.rs  proofs_v16_fork_trade.rs  (+15 more)
(+210 files in other folders)
