[package]
name = "percolator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
autotests = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(target_os, values("solana"))'] }

[lib]
name = "percolator"
path = "src/percolator.rs"

[dependencies]
# No runtime dependencies - pure no_std compatible library

[dev-dependencies]
proptest = "1.4"

[features]
default = []
test = []    # Use MAX_ACCOUNTS=64 (~0.17 SOL rent)
small = []   # Use MAX_ACCOUNTS=256 (~0.68 SOL rent)
medium = []  # Use MAX_ACCOUNTS=1024 (~2.7 SOL rent)
# No feature = MAX_ACCOUNTS=4096 (~6.9 SOL rent)
fuzz = ["test"]  # Enable fuzzing tests (includes test feature for test_visible helpers)

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true

[profile.sbf]
inherits = "release"
panic = "abort"

[workspace.metadata.kani]
flags = { tests = true }
unstable = { stubbing = true }

[[workspace.metadata.kani.proof]]
harness = ".*"
unwind = 70

# Explicit test targets. autotests = false disables Cargo auto-discovery so
# `cargo kani --tests` does not attempt to parse broken/feature-gated test
# files (amm_tests.rs, fuzzing.rs, kani.rs) that depend on removed symbols
# (AccountKind enum, NoOpMatcher) or dev-dep macros Kani's frontend cannot
# expand. The file `tests/kani.rs` is intentionally not listed — it is kept
# on disk for future resurrection but is NOT part of any build target.
[[test]]
name = "proofs_arithmetic"
path = "tests/proofs_arithmetic.rs"

[[test]]
name = "proofs_audit"
path = "tests/proofs_audit.rs"

[[test]]
name = "proofs_instructions"
path = "tests/proofs_instructions.rs"

[[test]]
name = "proofs_invariants"
path = "tests/proofs_invariants.rs"

[[test]]
name = "proofs_lazy_ak"
path = "tests/proofs_lazy_ak.rs"

[[test]]
name = "proofs_liveness"
path = "tests/proofs_liveness.rs"

[[test]]
name = "proofs_safety"
path = "tests/proofs_safety.rs"

[[test]]
name = "proofs_v1131"
path = "tests/proofs_v1131.rs"

[[test]]
name = "proofs_phase_f"
path = "tests/proofs_phase_f.rs"

[[test]]
name = "kani"
path = "tests/kani.rs"

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "amm_tests"
path = "tests/amm_tests.rs"

# NOTE: tests/fuzzing.rs is intentionally NOT declared as a [[test]] target.
# Its proptest! macro bodies parse as invalid Rust when proptest is not in
# scope, and activating the `fuzz` feature transitively activates `test`
# which reveals 600+ stale compile errors in unit_tests.rs. To run the
# proptest fuzz suite, either restore this entry locally with
# `required-features = ["fuzz"]` or copy fuzzing.rs into a separate crate.

